package br.edu.ifpb.cstsi.pss.scireview.observer;

public interface Observer {
    void atualizar(String evento, Object dados);
}